--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:client]
+platform = espressif32
+board = esp32dev
+framework = arduino
+lib_deps = 
+	adafruit/Adafruit SSD1306@^2.5.16
+	adafruit/Adafruit BME280 Library@^2.3.0
+build_src_filter = +<src/client/*>
+monitor_speed = 115200
+
+[env:server]
 platform = espressif32
 board = esp32dev
 framework = arduino
@@ -16,5 +26,5 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.12.4
 	adafruit/Adafruit SSD1306@^2.5.16
 	adafruit/Adafruit BME280 Library@^2.3.0
-build_src_filter = -<*> +<ESP32 WeatherServerInside.cpp>
+build_src_filter = +<src/server/*>
 monitor_speed = 115200
